fixed spacing for columns in homepage sections

--- a/sass/Pages/_home.scss
+++ b/sass/Pages/_home.scss
@@ -160,7 +160,6 @@
 .articles {
   @include flex-align(space-around, null);
   flex-wrap: wrap;
-	padding-bottom: 50px;
 
   .categories__article:nth-child(n + 4) {
     display: none;
@@ -175,7 +174,7 @@
 
 .articles-promotions {
   max-width: $max-width;
-	padding: 0 30px;
+  padding: 30px;
   h1 {
     text-align: center;
   }
