--- a/style.css
+++ b/style.css
@@ -1390,7 +1390,6 @@ a button, a .button, a .newsletter form .tnp-submit, .newsletter form a .tnp-sub
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  padding-bottom: 50px;
 }
 
 .articles .categories__article:nth-child(n + 4) {
@@ -1405,7 +1404,7 @@ a button, a .button, a .newsletter form .tnp-submit, .newsletter form a .tnp-sub
 
 .articles-promotions {
   max-width: 1500px;
-  padding: 0 30px;
+  padding: 30px;
 }
 
 .articles-promotions h1 {
